import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

allprojects {
    apply plugin: 'scala'
    apply plugin: 'java-library'
    apply plugin: 'com.github.johnrengelman.shadow'

    group 'fr.warzou'
    version '0.0.1'

    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://raw.githubusercontent.com/Iltotore/maven/master' }
    }

    jar.archiveFileName = "${project.name}.jar"
    shadowJar.archiveFileName = jar.archiveFileName

    processResources.from(sourceSets.main.resources.srcDirs) {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
        filter(ReplaceTokens, tokens: [VERSION: project.version])
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['--enable-preview']
        targetCompatibility = JavaVersion.VERSION_16
        sourceCompatibility = JavaVersion.VERSION_16
    }
}

test {
    useJUnitPlatform()
}

ext {
    librairies = [:]
}

librairies.scala = 'org.scala-lang:scala-library:2.13.8'
librairies.scalaTest = 'org.scalatest:scalatest_2.11:3.2.11'
librairies.junit = 'junit:junit:4.13.2'
librairies.spigot = 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
librairies.spigotAPI = 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
librairies.annotations = 'org.jetbrains:annotations:21.0.1'
librairies.spigotMetadataAPI = 'fr.il_totore:spigotmetadataapi:4.0-SNAPSHOT'